Updated SecuirtyConfig for dynamic urls