@@ -1,6 +1,7 @@
 package com.phgdae.backend.Admins;
 
 import com.phgdae.backend.enums.AdminRole;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -24,6 +25,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -31,6 +33,9 @@ import java.util.List;
 public class SecurityConfig {
 
     private final AdminRepository adminRepository;
+
+    @Value("${FRONTEND_URL:http://localhost:5173}")
+    private String frontendUrl;
 
     public SecurityConfig(AdminRepository adminRepository) {
         this.adminRepository = adminRepository;
@@ -77,22 +82,22 @@ public class SecurityConfig {
                         .anyMatch(a -> a.getAuthority().equals("ROLE_SUPER_ADMIN"));
 
                 return isSuperAdmin
-                        ? "http://localhost:5173/superadmin"
-                        : "http://localhost:5173/admin";
+                        ? frontendUrl + "/superadmin"
+                        : frontendUrl + "/admin";
             }
         };
     }
 
     @Bean
     public SimpleUrlAuthenticationFailureHandler customFailureHandler() {
-        return new SimpleUrlAuthenticationFailureHandler("http://localhost:5173/admin/login?error=no_privileges");
+        return new SimpleUrlAuthenticationFailureHandler(frontendUrl + "/admin/login?error=no_privileges");
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS")); // ← added PATCH
+        configuration.setAllowedOrigins(Arrays.asList(frontendUrl.split(",")));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
 
